Fixing json for deployment

--- a/my-portfolio/package.json
+++ b/my-portfolio/package.json
@@ -45,5 +45,13 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "vercel": {
+    "rewrites": [
+      {
+        "source": "/(.*)",
+        "destination": "/"
+      }
+    ]
   }
 }
