Deploying my portfolio site

--- a/my-portfolio/package.json
+++ b/my-portfolio/package.json
@@ -56,5 +56,8 @@
         "dest": "/index.html"
       }
     ]
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   }
 }
