--- a/my-portfolio/vercel.json
+++ b/my-portfolio/vercel.json
@@ -1,12 +1,8 @@
 {
   "routes": [
     {
-      "src": "/",
-      "dest": "/"
-    },
-    {
-      "src": "/test",
-      "dest": "/"
+      "src": "/.*",
+      "dest": "/index.html"
     }
   ]
 }
