--- a/my-portfolio/package.json
+++ b/my-portfolio/package.json
@@ -7,6 +7,10 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "babel-loader": "^8.3.0",
+    "css-loader": "^5.2.7",
+    "eslint": "^8.57.0",
+    "eslint-loader": "^4.0.2",
     "nodemon": "^3.1.0",
     "rc-progress": "^3.5.1",
     "react": "^18.2.0",
@@ -14,11 +18,12 @@
     "react-icons": "^5.0.1",
     "react-progress": "^0.0.12",
     "react-router-dom": "^6.22.1",
-    "react-scripts": "^3.0.1",
+    "react-scripts": "^5.0.1",
     "react-simple-animate": "^3.5.2",
     "react-tsparticles": "^2.12.2",
     "react-vertical-timeline-component": "^3.6.0",
     "sass": "^1.71.1",
+    "sass-loader": "^10.1.1",
     "tsparticles": "^2.0.6",
     "web-vitals": "^2.1.4"
   },
@@ -58,6 +63,7 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "html-webpack-plugin": "^4.5.2"
   }
 }
