Improved my code and cleaned up syntax errors.  Created an optimized production build

--- a/my-portfolio/package.json
+++ b/my-portfolio/package.json
@@ -10,6 +10,7 @@
     "babel-loader": "^8.3.0",
     "css-loader": "^5.2.7",
     "eslint-loader": "^4.0.2",
+    "html-entities": "^2.5.1",
     "nodemon": "^3.1.0",
     "rc-progress": "^3.5.1",
     "react": "^18.2.0",
@@ -58,6 +59,7 @@
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "eslint": "^8.57.0",
+    "eslint-config-react-app": "^7.0.1",
     "html-webpack-plugin": "^4.5.2"
   }
 }
