--- a/my-portfolio/package.json
+++ b/my-portfolio/package.json
@@ -9,7 +9,6 @@
     "@testing-library/user-event": "^13.5.0",
     "babel-loader": "^8.3.0",
     "css-loader": "^5.2.7",
-    "eslint-loader": "^4.0.2",
     "html-entities": "^2.5.1",
     "nodemon": "^3.1.0",
     "rc-progress": "^3.5.1",
@@ -60,6 +59,7 @@
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "eslint": "^8.57.0",
     "eslint-config-react-app": "^7.0.1",
-    "html-webpack-plugin": "^4.5.2"
+    "html-webpack-plugin": "^4.5.2",
+    "eslint-loader": "^4.0.2"
   }
 }
